--- a/Assets/Scripts/UI/UIShop.uxml
+++ b/Assets/Scripts/UI/UIShop.uxml
@@ -1,6 +1,23 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0.78);">
-        <ui:VisualElement style="flex-grow: 1; align-self: flex-end; justify-content: flex-end; background-color: rgba(0, 0, 0, 0);">
+    <Style src="project://database/Assets/shop.uss?fileID=7433441132597879392&amp;guid=6033f10bbd25d814b9ec78ab79191070&amp;type=3#shop" />
+    <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0.78); flex-direction: row;">
+        <ui:VisualElement style="flex-grow: 1; padding-top: 140px; padding-right: 140px; padding-bottom: 140px; padding-left: 140px;">
+            <ui:VisualElement name="itemContainer" style="flex-grow: 1; background-color: rgba(61, 101, 88, 0.31); border-top-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px; padding-top: 40px; padding-right: 40px; padding-bottom: 40px; padding-left: 40px; flex-direction: row; min-width: 100%; min-height: 90%; max-height: 90%; max-width: 100%;">
+                <ui:VisualElement class="shop-item" style="flex-grow: 0; min-width: 30%; width: 30%; max-width: 30%; height: 100%; min-height: 100%; max-height: 100%;">
+                    <ui:Label text="Label" class="shop-name" />
+                    <ui:Label text="Label" class="shop-desc" />
+                    <ui:Label text="Label" class="shop-price" />
+                    <ui:Button text="Button" class="shop-button" />
+                </ui:VisualElement>
+                <ui:VisualElement class="shop-item" style="flex-grow: 0; width: 30%; max-width: 30%; min-width: 30%; min-height: 100%; max-height: 100%; height: 100%;" />
+                <ui:VisualElement class="shop-item" style="flex-grow: 0; min-width: 30%; max-width: 30%; min-height: 100%; max-height: 100%; height: 100%;" />
+            </ui:VisualElement>
+            <ui:VisualElement style="flex-grow: 0; flex-direction: row; justify-content: space-between; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px;">
+                <ui:Button text="Button" name="rerollButton" style="font-size: 29px;" />
+                <ui:Label text="MONEY LABEL" name="moneyLabel" style="color: rgb(255, 255, 255); font-size: 30px; background-color: rgba(249, 255, 71, 0.58); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; -unity-text-align: middle-center; -unity-font-style: normal;" />
+            </ui:VisualElement>
+        </ui:VisualElement>
+        <ui:VisualElement style="flex-grow: 0; align-self: auto; justify-content: flex-end; background-color: rgba(0, 0, 0, 0); max-width: 5%;">
             <ui:Button name="nextWave" text="next" style="top: auto; right: 0; bottom: 0; flex-direction: column; flex-wrap: nowrap; align-self: flex-end;" />
         </ui:VisualElement>
     </ui:VisualElement>
