--- a/Assets/Scripts/UI/UIOverlay.uxml
+++ b/Assets/Scripts/UI/UIOverlay.uxml
@@ -3,6 +3,7 @@
     <ui:VisualElement style="flex-grow: 1; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; align-self: flex-start; justify-content: flex-end; align-content: stretch; align-items: flex-start; font-size: 25px; -unity-font-style: bold; height: 50%; min-height: 50%; max-height: 50%;">
         <ui:VisualElement style="flex-grow: 1;">
             <ui:Label text="score : 0" name="scoreLabel" />
+            <ui:Label text="highscore : 0" name="highscoreLabel" />
         </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 1;">
             <ui:Label text="money : 0" name="moneyLabel" />
