--- a/Assets/Scripts/UI/UIShop.uxml
+++ b/Assets/Scripts/UI/UIShop.uxml
@@ -3,11 +3,12 @@
     <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0.78); flex-direction: row;">
         <ui:VisualElement style="flex-grow: 1; padding-top: 140px; padding-right: 140px; padding-bottom: 140px; padding-left: 140px;">
             <ui:VisualElement name="itemContainer" style="flex-grow: 1; background-color: rgba(61, 101, 88, 0.31); border-top-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px; padding-top: 40px; padding-right: 40px; padding-bottom: 40px; padding-left: 40px; flex-direction: row; min-width: 100%; min-height: 90%; max-height: 90%; max-width: 100%;">
-                <ui:VisualElement class="shop-item" style="flex-grow: 0; min-width: 30%; width: 30%; max-width: 30%; height: 100%; min-height: 100%; max-height: 100%;">
+                <ui:VisualElement name="VisualElement" class="shop-item" style="flex-grow: 0; min-width: 30%; width: 30%; max-width: 30%; height: 100%; min-height: 100%; max-height: 100%;">
                     <ui:Label text="Label" class="shop-name" />
                     <ui:Label text="Label" class="shop-desc" />
                     <ui:Label text="Label" class="shop-price" />
                     <ui:Button text="Button" class="shop-button" />
+                    <ui:VisualElement style="flex-grow: 1;" />
                 </ui:VisualElement>
                 <ui:VisualElement class="shop-item" style="flex-grow: 0; width: 30%; max-width: 30%; min-width: 30%; min-height: 100%; max-height: 100%; height: 100%;" />
                 <ui:VisualElement class="shop-item" style="flex-grow: 0; min-width: 30%; max-width: 30%; min-height: 100%; max-height: 100%; height: 100%;" />
