--- a/Assets/Scripts/UI/UIOverlay.uxml
+++ b/Assets/Scripts/UI/UIOverlay.uxml
@@ -1,24 +1,26 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/overlayUI.uss?fileID=7433441132597879392&amp;guid=0cc8e4e0d4bdcf54680e78f2dc15a69b&amp;type=3#overlayUI" />
-    <ui:VisualElement style="flex-grow: 1; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; align-self: flex-start; justify-content: flex-end; align-content: stretch; align-items: flex-start; font-size: 25px; -unity-font-style: bold; height: 50%; min-height: 50%; max-height: 50%;">
-        <ui:VisualElement style="flex-grow: 1;">
-            <ui:Label text="score : 0" name="scoreLabel" />
-            <ui:Label text="highscore : 0" name="highscoreLabel" />
-        </ui:VisualElement>
-        <ui:VisualElement style="flex-grow: 1;">
-            <ui:Label text="money : 0" name="moneyLabel" />
-        </ui:VisualElement>
-        <ui:VisualElement style="flex-grow: 1;">
-            <ui:Label text="wave :" name="waveLabel" />
-        </ui:VisualElement>
-        <ui:VisualElement style="flex-grow: 1; flex-direction: column;">
-            <ui:Label text="Level :" name="levelLabel" />
-        </ui:VisualElement>
-        <ui:VisualElement style="flex-grow: 1;">
-            <ui:ProgressBar value="22" title="levelxp" name="xpBar" style="width: 150px; background-color: rgba(0, 0, 0, 0);" />
-        </ui:VisualElement>
-        <ui:VisualElement style="flex-grow: 1;">
-            <ui:ProgressBar value="22" title="hp" name="hpBar" style="width: 150px;" />
+    <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/Sprites/ui-background.aseprite?fileID=7219712194791166488&amp;guid=6d8dbd5075a968743a423b4c56d0fd02&amp;type=3#ui-background&quot;);">
+        <ui:VisualElement style="flex-grow: 1; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; align-self: flex-start; justify-content: flex-end; align-content: stretch; align-items: flex-start; font-size: 25px; -unity-font-style: bold; height: 50%; min-height: 50%; max-height: 50%;">
+            <ui:VisualElement style="flex-grow: 1;">
+                <ui:Label text="score : 0" name="scoreLabel" />
+                <ui:Label text="highscore : 0" name="highscoreLabel" />
+            </ui:VisualElement>
+            <ui:VisualElement style="flex-grow: 1;">
+                <ui:Label text="money : 0" name="moneyLabel" />
+            </ui:VisualElement>
+            <ui:VisualElement style="flex-grow: 1;">
+                <ui:Label text="wave :" name="waveLabel" />
+            </ui:VisualElement>
+            <ui:VisualElement style="flex-grow: 1; flex-direction: column;">
+                <ui:Label text="Level :" name="levelLabel" />
+            </ui:VisualElement>
+            <ui:VisualElement style="flex-grow: 1;">
+                <ui:ProgressBar value="22" title="levelxp" name="xpBar" style="width: 150px; background-color: rgba(0, 0, 0, 0);" />
+            </ui:VisualElement>
+            <ui:VisualElement style="flex-grow: 1;">
+                <ui:ProgressBar value="22" title="hp" name="hpBar" style="width: 150px;" />
+            </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
