--- a/Assets/Scripts/UI/UITab.uxml
+++ b/Assets/Scripts/UI/UITab.uxml
@@ -1,5 +1,82 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement style="flex-grow: 1;">
-        <ui:Label text="Passt" style="font-size: 300px; -unity-font-style: normal; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/Alkhemikal.ttf?fileID=12800000&amp;guid=e401838aaa485fc46a86912e6519f627&amp;type=3#Alkhemikal&quot;);" />
+    <Style src="project://database/Assets/tabUSS.uss?fileID=7433441132597879392&amp;guid=3cf884c9e46ef42828eaaacf8739e4f2&amp;type=3#tabUSS" />
+    <ui:VisualElement style="flex-grow: 1; flex-direction: row; padding-top: 101px; padding-right: 101px; padding-bottom: 101px; padding-left: 101px;">
+        <ui:VisualElement style="flex-grow: 1;" />
+        <ui:VisualElement style="flex-grow: 1;" />
+        <ui:VisualElement style="flex-grow: 0;">
+            <ui:VisualElement name="Stats" style="flex-grow: 0;">
+                <ui:Label text="Stats:" style="font-size: 40px; -unity-font-style: bold; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;);" />
+            </ui:VisualElement>
+            <ui:VisualElement name="Combat" style="flex-grow: 0;">
+                <ui:Label text="Combat:" triple-click-selects-line="false" style="font-size: 35px; -unity-font-style: bold; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); -unity-text-align: upper-center;" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="Max Health:" class="stat-name" />
+                <ui:Label text="0.23" name="labelMaxHealth" class="stat-value" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="(Max Health %: " enable-rich-text="true" class="stat-name" />
+                <ui:Label text="123" name="labelMaxHealthP" class="stat-value" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="Attack Damage:" class="stat-name" />
+                <ui:Label text="456" name="labelAttackDamage" class="stat-value" style="height: 25px;" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="(Attack Damage %:" class="stat-name" />
+                <ui:Label text="789" name="labelAttackDamageP" class="stat-value" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="Attack Speed:" class="stat-name" />
+                <ui:Label text="Label" name="labelAttackSpeed" class="stat-value" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="(Attack Speed %:" class="stat-name" />
+                <ui:Label text="012" name="labelAttackSpeedP" class="stat-value" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="Bullet Speed:" class="stat-name" />
+                <ui:Label text="Label" name="labelBulletSpeed" class="stat-value" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="Bullet Distance: " class="stat-name" />
+                <ui:Label text="Label" name="labelBulletDistance" class="stat-value" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="Bullet Spread: " class="stat-name" />
+                <ui:Label text="Label" name="labelBulletSpread" class="stat-value" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="Defense: " class="stat-name" />
+                <ui:Label text="Label" name="labelDefense" class="stat-value" />
+            </ui:VisualElement>
+            <ui:VisualElement name="Movement" style="flex-grow: 0;">
+                <ui:Label text="Movement:" style="font-size: 35px; -unity-font-style: bold; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); -unity-text-align: upper-center;" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="Movement Speed: " class="stat-name" />
+                <ui:Label text="Label" name="labelMoveSpeed" class="stat-value" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="(Movement Speed %: " class="stat-name" />
+                <ui:Label text="Label" name="labelMoveSpeedP" class="stat-value" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="Dash Distance:" class="stat-name" />
+                <ui:Label text="Label" name="labelDashDistance" class="stat-value" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="Dash Cooldown (per Dash):" class="stat-name" />
+                <ui:Label text="Label" name="labelDashCooldown" class="stat-value" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="(Dash Cooldown %:" class="stat-name" />
+                <ui:Label text="Label" name="labelDashCooldownP" class="stat-value" />
+            </ui:VisualElement>
+            <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                <ui:Label text="Dashes:" class="stat-name" />
+                <ui:Label text="Label" name="labelDashes" class="stat-value" />
+            </ui:VisualElement>
+        </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
