--- a/Assets/Scripts/UI/UIOverlay.uxml
+++ b/Assets/Scripts/UI/UIOverlay.uxml
@@ -1,5 +1,5 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <Style src="project://database/Assets/overlayUI.uss?fileID=7433441132597879392&amp;guid=0cc8e4e0d4bdcf54680e78f2dc15a69b&amp;type=3" />
+    <Style src="project://database/Assets/overlayUI.uss?fileID=7433441132597879392&amp;guid=0cc8e4e0d4bdcf54680e78f2dc15a69b&amp;type=3#overlayUI" />
     <ui:VisualElement picking-mode="Ignore" name="VisualElement" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/Sprites/ui-background.aseprite?fileID=7219712194791166488&amp;guid=6d8dbd5075a968743a423b4c56d0fd02&amp;type=3#ui-background&quot;);">
         <ui:VisualElement name="VisualElement" style="flex-grow: 0; height: 150px; flex-direction: row;">
             <ui:VisualElement style="flex-grow: 0; width: 33%;">
@@ -18,22 +18,19 @@
                     <ui:Label text="00:00" name="remainingTime" class="time" />
                 </ui:VisualElement>
             </ui:VisualElement>
-            <ui:VisualElement style="flex-grow: 1;" />
+            <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
+                <ui:VisualElement style="flex-grow: 0; width: 73%;" />
+                <ui:VisualElement style="flex-grow: 0; justify-content: flex-start; align-self: stretch; align-items: flex-end; padding-right: 30px;">
+                    <ui:VisualElement style="flex-grow: 0; height: 21%; width: auto;" />
+                    <ui:Label text="1234565677" name="scoreLabel" class="score-label" style="padding-bottom: 0; padding-top: 0; -unity-text-align: upper-right; text-shadow: 1px 1px 0 rgb(0, 0, 0); white-space: pre; width: 190px; max-width: 190px; min-width: 190px;" />
+                    <ui:Label text="23433335 $" name="moneyLabel" class="money-label" style="padding-top: 0; padding-bottom: 0; -unity-text-align: upper-right; min-width: 190px; max-width: 190px; width: 190px; color: rgb(195, 158, 38); text-shadow: 1px 1px 0 rgb(0, 0, 0);" />
+                </ui:VisualElement>
+            </ui:VisualElement>
         </ui:VisualElement>
-        <ui:VisualElement style="flex-grow: 1;" />
-        <ui:VisualElement name="VisualElement" style="flex-grow: 1; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; align-self: flex-start; justify-content: flex-end; align-content: stretch; align-items: flex-start; font-size: 25px; -unity-font-style: bold; height: 50%; min-height: 50%; max-height: 50%;">
-            <ui:VisualElement style="flex-grow: 1;">
-                <ui:Label text="score : 0" name="scoreLabel" />
-                <ui:Label text="highscore : 0" name="highscoreLabel" />
-            </ui:VisualElement>
-            <ui:VisualElement style="flex-grow: 1;">
-                <ui:Label text="money : 0" name="moneyLabel" />
-            </ui:VisualElement>
-            <ui:VisualElement style="flex-grow: 1; flex-direction: column;">
-                <ui:Label text="Level :" name="levelLabel" />
-            </ui:VisualElement>
-            <ui:VisualElement style="flex-grow: 1;">
-                <ui:ProgressBar value="22" title="levelxp" name="xpBar" style="width: 150px; background-color: rgba(0, 0, 0, 0);" />
+        <ui:VisualElement style="flex-grow: 0; height: 59%;" />
+        <ui:VisualElement style="flex-grow: 1; align-self: center;">
+            <ui:VisualElement style="flex-grow: 1; justify-content: center; align-self: center; align-items: center;">
+                <ui:Label text="67" name="levelLabel" class="level-label" style="-unity-text-align: upper-left; margin-right: 0; margin-left: 0; padding-right: 0; padding-left: 3px;" />
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
