--- a/Assets/healthbarUI.uss
+++ b/Assets/healthbarUI.uss
@@ -12,3 +12,12 @@ VisualElement > VisualElement > #VisualElement > .unity-progress-bar > #unity-pr
 
 VisualElement > VisualElement > #VisualElement > .unity-progress-bar > #unity-progress-bar {
 }
+
+VisualElement > VisualElement > #xpBar > #unity-progress-bar > .unity-progress-bar__background > .unity-progress-bar__progress {
+    height: 22px;
+    background-color: rgb(90, 122, 9);
+}
+
+VisualElement > VisualElement > #xpBar > #unity-progress-bar > .unity-progress-bar__background {
+    background-color: rgb(128, 128, 128);
+}
