--- a/Assets/Scripts/UI/HealthBarUI.uxml
+++ b/Assets/Scripts/UI/HealthBarUI.uxml
@@ -9,7 +9,7 @@
         </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 0; height: 72%;" />
         <ui:VisualElement style="flex-grow: 1; justify-content: center; align-self: center;">
-            <ui:ProgressBar value="100" name="xpBar" style="height: 23px; color: rgb(255, 255, 255); width: 960px; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); font-size: 18px; -unity-paragraph-spacing: 0; margin-top: 4px; -unity-text-align: lower-left;" />
+            <ui:ProgressBar value="50" name="xpBar" high-value="100" style="height: 23px; color: rgb(255, 255, 255); width: 960px; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); font-size: 18px; -unity-paragraph-spacing: 0; margin-top: 4px; -unity-text-align: lower-left;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
