--- a/Assets/Scripts/UI/ItemTemplates/TemplateMythic.uxml
+++ b/Assets/Scripts/UI/ItemTemplates/TemplateMythic.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/templateItemUSS.uss?fileID=7433441132597879392&amp;guid=5ec5cea8bbfa94a4c8ade975179fe972&amp;type=3#templateItemUSS" />
-    <ui:VisualElement class="background" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/Sprites/Items/mythicItem.aseprite?fileID=-3486510152554974183&amp;guid=fcf055930d8d1ae4cb08665e4a15d555&amp;type=3#mythicItem&quot;); padding-top: 59px; padding-right: 59px; padding-bottom: 59px; padding-left: 58px; margin-left: 15px; margin-right: 15px; width: 300px; min-width: 300px; max-width: 300px; height: 600px; min-height: 600px; max-height: 600px; margin-top: 15px; margin-bottom: 15px;">
-        <ui:VisualElement template="inhaltItems" name="VisualElement" style="justify-content: space-between; flex-grow: 1;">
+    <ui:VisualElement class="background" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/Sprites/Items/mythicItem.aseprite?fileID=-3486510152554974183&amp;guid=fcf055930d8d1ae4cb08665e4a15d555&amp;type=3#mythicItem&quot;); padding-top: 58px; padding-right: 59px; padding-bottom: 59px; padding-left: 58px; margin-left: 15px; margin-right: 15px; width: 300px; min-width: 300px; max-width: 300px; height: 600px; min-height: 600px; max-height: 600px; margin-top: 15px; margin-bottom: 15px;">
+        <ui:VisualElement template="inhaltItems" name="VisualElement" style="justify-content: space-between; flex-grow: 1; height: 470px; min-height: 470px; max-height: 470px;">
             <ui:VisualElement name="VisualElement" style="flex-grow: 0;">
                 <ui:Label text="Labeadsadadadadadadal" name="nameLabel" class="name-label" style="height: 70px; width: 200px; min-width: 200px; max-width: 200px; color: rgb(35, 13, 44); -unity-text-outline-color: rgb(130, 27, 171); text-shadow: 1px 1px 1px rgb(130, 27, 171); -unity-text-align: middle-center;" />
                 <ui:VisualElement style="flex-grow: 0; flex-direction: row; height: 150px;">
@@ -24,7 +24,7 @@
             </ui:VisualElement>
             <ui:VisualElement style="flex-grow: 0; justify-content: space-evenly; align-items: center; align-self: auto; width: 200px; min-width: 200px; max-width: 200px;">
                 <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
-                    <ui:Button text="Button" name="buyButton" style="width: 200%; min-width: 200px; max-width: 200px; height: 32px; min-height: 32px; max-height: 32px; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); font-size: 20px;" />
+                    <ui:Button text="Button" name="buyButton" style="width: 120px; min-width: 120px; max-width: 120px; height: 39px; min-height: 39px; max-height: 39px; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); font-size: 20px; background-image: url(&quot;project://database/Assets/Sprites/Items/mythicButton.aseprite?fileID=6938936534314119802&amp;guid=06ad1c979d2174a46bfe45e13bca9e4a&amp;type=3#mythicButton&quot;); background-color: rgba(188, 188, 188, 0); border-left-color: rgba(149, 149, 149, 0); border-right-color: rgba(149, 149, 149, 0); border-top-color: rgba(149, 149, 149, 0); border-bottom-color: rgba(149, 149, 149, 0); color: rgb(35, 13, 44);" />
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
