--- a/Assets/Scripts/UI/ItemTemplates/TemplateRare.uxml
+++ b/Assets/Scripts/UI/ItemTemplates/TemplateRare.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/templateItemUSS.uss?fileID=7433441132597879392&amp;guid=5ec5cea8bbfa94a4c8ade975179fe972&amp;type=3#templateItemUSS" />
     <ui:VisualElement class="background" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/Sprites/Items/rareItem.aseprite?fileID=326711510872529528&amp;guid=b8256fb23bbe38646a98546b1266b638&amp;type=3#rareItem&quot;); padding-top: 48px; padding-right: 48px; padding-bottom: 48px; padding-left: 48px; margin-left: 15px; margin-right: 15px; width: 300px; min-width: 300px; max-width: 300px; height: 600px; min-height: 600px; max-height: 600px; margin-top: 15px; margin-bottom: 15px;">
-        <ui:VisualElement template="inhaltItems" name="VisualElement" style="justify-content: space-between; flex-grow: 1;">
+        <ui:VisualElement template="inhaltItems" name="VisualElement" style="justify-content: space-between; flex-grow: 1; height: 480px; min-height: 480px; max-height: 480px;">
             <ui:VisualElement name="VisualElement" style="flex-grow: 1;">
                 <ui:Label text="dfsdfsfd" name="nameLabel" class="name-label" style="height: 70px; width: 200px; min-width: 200px; max-width: 200px; text-shadow: 1px 1px 0 rgb(52, 109, 201); color: rgb(10, 14, 61); -unity-text-align: middle-center;" />
                 <ui:VisualElement style="flex-grow: 0; flex-direction: row; height: 150px;">
@@ -23,8 +23,8 @@
                 </ui:VisualElement>
             </ui:VisualElement>
             <ui:VisualElement style="flex-grow: 0; justify-content: space-evenly; align-items: center; align-self: auto; width: 200px; min-width: 200px; max-width: 200px;">
-                <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
-                    <ui:Button text="Button" name="buyButton" style="width: 200%; min-width: 200px; max-width: 200px; height: 32px; min-height: 32px; max-height: 32px; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); font-size: 20px;" />
+                <ui:VisualElement style="flex-grow: 1; flex-direction: row; -unity-text-outline-color: rgba(0, 0, 0, 0);">
+                    <ui:Button text="Button" name="buyButton" style="width: 120px; min-width: 120px; max-width: 120px; height: 39px; min-height: 39px; max-height: 39px; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); font-size: 20px; background-image: url(&quot;project://database/Assets/Sprites/Items/rareButton.aseprite?fileID=759380327125112259&amp;guid=6db101fc92ec24c4da7289321eee0cc5&amp;type=3#rareButton&quot;); padding-left: 12px; background-color: rgba(188, 188, 188, 0); -unity-text-outline-color: rgba(255, 255, 255, 0); color: rgb(10, 14, 61); -unity-text-outline-width: 0; border-left-color: rgba(149, 149, 149, 0); border-right-color: rgba(149, 149, 149, 0); border-top-color: rgba(149, 149, 149, 0); border-bottom-color: rgba(149, 149, 149, 0); text-shadow: 1px 1px 0 rgb(146, 206, 252);" />
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
